Changed icon geisha

--- a/src/app/components/pages/contact/contact.component.html
+++ b/src/app/components/pages/contact/contact.component.html
@@ -8,7 +8,7 @@
           <a href="https://www.linkedin.com/in/emilie-nogaro-devwebjs19/" target="blank" id="linkedin-link" class="text-white">Linkedin</a>
         </p>
       </div>
-      <img src="../../../../assets/images/geisha.png" alt="icon-geisha" id="contact__img">
+      <img src="assets/images/icons/geisha.png" alt="icon-geisha" id="contact__img">
     </div>
     <div id="contact__form--wrapper">
       <form [formGroup]="contactForm" class="text-white flex flex-column">
