--- a/src/app/components/pages/about/about-about/about-about.component.scss
+++ b/src/app/components/pages/about/about-about/about-about.component.scss
@@ -5,42 +5,76 @@ h2 {
   @include h2-style;
 }
 
-#tab__content--about {
-  display: flex;
-  flex-direction: column;
-}
-
-#tab__profile {
-  display: flex;
-}
-
-#tab__profile--img {
+#about__grid {
   background-color: $primary;
-  width: 60rem;
   border-radius: .5rem;
+  display: grid;
+  grid-template-columns: repeat(5, calc(100% / 5));
+  // grid-template-rows: repeat(4, auto);
 }
 
-#tab__profile--text {
-  padding-left: 2rem;
+.box {
+  padding: 2.5rem 2rem;
+  text-align: center;
+  img {
+    width: 5rem;
+    cursor: pointer;
+  }
+}
+.box:nth-child(2n + 1) {
+  background-color: #3A6DAF;
 }
 
 
 @media screen and (max-width: 1024px) {
 
-  #tab__content--about {
-    flex-direction: column;
+  #about__grid {
+    grid-template-columns: repeat(4, calc(100% / 4));
   }
 
-  #tab__profile {
-    flex-direction: column;
+  .box {
+    padding: 2rem;
+
+    img {
+      width: 4rem;
+    }
   }
 
-  #tab__profile--img {
-    width: 100%;
-    height: 20rem;
+  .box:nth-child(2n + 1) {
+    background-color: $primary;
   }
 
-  #tab__profile--text {
-    padding-left: 0;
+  .box:nth-child(8n + 1), .box:nth-child(8n + 3), .box:nth-child(8n + 6),
+  .box:nth-child(8n + 8) {
+    background-color: #3A6DAF;
   }
+}
+
+
+@media screen and (max-width: 768px) {
+
+  #about__grid {
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(8, auto);
+  }
+
+  .box {
+    padding: 2rem;
+
+    img {
+      width: 3rem;
+    }
+  }
+
+  .box:nth-child(8n + 1),
+  .box:nth-child(8n + 3),
+  .box:nth-child(8n + 6),
+  .box:nth-child(8n + 8) {
+    background-color: $primary;
+  }
+
+  .box:nth-child(4n + 1), .box:nth-child(4n + 4) {
+    background-color: #3A6DAF;
+  }
+
 }
