Added "open pdf link"

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -7,7 +7,7 @@
         a libero rhoncus congue. Morbi lorem augue, porttitor at auctor eget, volutpat ac dolor.</p>
       <div id="home__buttons--wrapper" class="flex">
         <button routerLink="/contact">Me Contacter</button>
-        <button routerLink="/">Voir mon CV</button>
+        <button (click)="openResumePdf()">Voir mon CV</button>
       </div>
     </div>
   </div>
