Added logo img in header & Modified styles

--- a/src/app/components/shared/layout/header/header.component.html
+++ b/src/app/components/shared/layout/header/header.component.html
@@ -1,7 +1,10 @@
-<header>
-  <a id="logo" routerLink="/">Emino</a>
+<header class="bckg-primary text-white flex justify-between align-center">
+  <a id="logo" class="flex align-center" routerLink="/">
+    <img src="assets/images/logos/logo_128.png" alt="logo_accent">
+    <span>Emino</span>
+  </a>
   <nav id="header__nav">
-    <ul>
+    <ul class="flex justify-between">
       <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
 true}">Accueil</a></li>
       <li><a routerLink="/about" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
