--- a/src/app/components/shared/layout/header/header.component.scss
+++ b/src/app/components/shared/layout/header/header.component.scss
@@ -9,13 +9,8 @@ a:hover, a.active {
 }
 
 header {
-  background-color: $primary;
-  color: #fff;
   width: 100%;
   height: 8rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 #logo {
@@ -23,19 +18,19 @@ header {
   font-size: 3rem;
   color: $accent;
   padding-left: 5rem;
+
+  img {
+    width: 3rem;
+    margin-right: .5rem;
+  }
 }
 
-nav#header__nav {
+#header__nav {
   text-transform: uppercase;
-  // font-weight: 600;
   width: 50%;
   padding-right: 5rem;
 }
 
-ul {
-  display: flex;
-  justify-content: space-between;
-}
 li {
   font-size: 1.4rem;
 
@@ -59,13 +54,17 @@ li {
 }
 
 @media screen and (max-width: 768px) {
-    header {
-      nav {
-          display: none;
-        }
 
-        #header__burger {
-          display: block;
-        }
-    }
+  #logo {
+    padding-left: 3rem;
+  }
+
+  #header__nav {
+    display: none;
+  }
+
+  #header__burger {
+    display: block;
+  }
+
 }
