--- a/src/styles.scss
+++ b/src/styles.scss
@@ -120,6 +120,10 @@ h3 {
   justify-content: space-between;
 }
 
+.align-center {
+  align-items: center;
+}
+
 
 @media screen and (max-width: 1024px) and (min-width: 769px) {
 
